[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yamper"
version = "0.1.0"
authors = [
  { name="Deepak", email="hey.usedeep@email.com" },
]
description = "A Markdown to HTML converter"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.scripts]
yamper = "yamper.cli:main"

[project.urls]
Homepage = "https://github.com/useDeep/yamper"
Issues = "https://github.com/useDeep/yamper/issues"
